Exclude linearizability tests from 17